update to html and css files

--- a/roger_wilco/training_app/templates/current_training.html
+++ b/roger_wilco/training_app/templates/current_training.html
@@ -7,8 +7,6 @@
     <title>Current Training</title>
     <link rel="stylesheet" href="style/dashboard.css" />
     <link rel="stylesheet" href="style/doubleview.css" />
-    <link href="dashboard.css" rel="stylesheet" type="text/css">
-    <link href="doubleview.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -20,14 +18,12 @@
         <!--Sidebar navigation-->
         <div class="nav">
             <ul class="navlinks">
-                <li><a href="#">Current Training</a></li>
-                <li><a href="#">Schedule Training</a></li>
-                <li><a href="#">Training Search</a></li>
-                <li><a href="#">Employee Search</a></li>
-                <li><a href="#">Add Employee </a></li>
-                <li><a href="#">System Status</a></li>
-                <li><a href="#">Network Status</a></li>
-                <li><a href="#">Database Status</a></li>
+                <li><a href="current_training.html">Current Training</a></li><br>
+                <li><a href="#">Schedule Training</a></li><br>
+                <li><a href="training_search_tool.html">Training Search</a></li><br>
+                <li><a href="employee_search.html">Employee Search</a></li><br>
+                <li><a href="add_employee.html">Add Employee </a></li><br>
+                <li><a href="database_status.html">Database Status</a></li><br>
             </ul>
         </div>
 
