--- a/roger_wilco/training_app/templates/login.html
+++ b/roger_wilco/training_app/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Roger Wilco Training</title>
-	<link rel="stylesheet" href="login.css"/>
+	<link rel="stylesheet" href="style/login.css"/>
 </head>
 <body>
 
@@ -12,21 +12,22 @@
 
     <form action="action_page.php" method="post">
         <div class="container1">
-            <img src="rwilco_logo.png" alt="Roger Wilco" class="logo" width="1000" height="500">
+            <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="1000" height="500">
         </div>
 
-        <div class="container2">
+      <div class="container2">
             <label class="unamebtntxt" for="uname"><b>Username</b></label>
             <input class="unamebtn" type="text" placeholder="Enter Username" name="uname" required>
-
-            <label class= "pswdbtntxt" for="psw"><b>Password</b></label>
+            <br><br>
+<label class= "pswdbtntxt" for="psw"><b>Password</b></label>
             <input class="pswdbtn" type="password" placeholder="Enter Password" name="psw" required>
-
-            <button class="loginbtn" type="submit">Login</button>
+            <br>
+        <br>
+<button class="loginbtn" type="submit">&nbsp;Login</button>
             <!--<label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
             </label>-->
-        </div>
+      </div>
 
         <div class="container">
             <span class="psw"><a href="/problemreport.html">Need help?</a></span>
