--- a/roger_wilco/training_app/templates/database_status.html
+++ b/roger_wilco/training_app/templates/database_status.html
@@ -2,35 +2,36 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
+	<meta charset="utf-8" />
     <title>Database Status</title>
-<link href="dashboard.css" rel="stylesheet" type="text/css">
-<link href="doubleview.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="style/dashboard.css" />
 </head>
 <body>
 
-    <div class="lcontainer">
-        <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="500" height="250">
-    </div>
+    <div class="leftcont">
+        <div class="locon">
+            <img src="html_assets/logo_color.svg" alt="Roger Wilco" class="logo" width="500" height="250">
+        </div>
 
-    <!--Sidebar navigation-->
-    <div class="mainNav">
-		<div class="leftcont">
-	
-        <ul>
-            <li><a href="#">Current Training</a></li>
-            <li><a href="#">Schedule Training</a></li>
-            <li><a href="#">Training Search</a></li>
-            <li><a href="#">Employee Search</a></li>
-            <li><a href="#">Add Employee </a></li>
-            <li><a href="#">System Status</a></li>
-            <li><a href="#">Network Status</a></li>
-            <li><a href="#">Database Status</a></li>
-        </ul>
-			<div class="divB">
-			</div><li><a href="#">Log Out</a></li>
-            <li><a href="#">Support</a></li>	
-		</div></div>
+        <!--Sidebar navigation-->
+        <div class="nav">
+            <ul class="navlinks">
+                <li><a href="current_training.html">Current Training</a></li><br>
+                <li><a href="#">Schedule Training</a></li><br>
+                <li><a href="training_search_tool.html">Training Search</a></li><br>
+                <li><a href="employee_search.html">Employee Search</a></li><br>
+                <li><a href="add_employee.html">Add Employee </a></li><br>
+                <li><a href="database_status.html">Database Status</a></li><br>
+            </ul>
+        </div>
+
+        <div class="nav2">
+            <ul class="nav2links">
+                <li> <a href="#">Log Out</a></li>
+                <li><a href="#">Support</a></li>
+            </ul>
+        </div>
+    </div>
 
     <!--Display database status-->
 
