--- a/roger_wilco/training_app/templates/style/dashboard.css
+++ b/roger_wilco/training_app/templates/style/dashboard.css
@@ -1,20 +1,31 @@
 ﻿body
 {
     font-family: Arial, Helvetica, sans-serif;
+	font-size: 24px;
 }
 
-div{
-    display:block
-}
 
                                     /*Background colors added to see container positions. Will delete when completed*/
 
   /*styles for left parent container*/
+ul{
+	list-style-type: none;
+}
+
+a{
+	color: rgb(1,1,63);
+	text-decoration: none;
+}
     .leftcont{
         width: 25%;
         height: 100vh;
         float: left;
-        background-color: aquamarine;
+        background-image: url("../html_assets/dash_bg.svg");
+		background-size: 150%;
+		background-repeat: no-repeat;
+		background-position: center;
+		padding-left: 7em;
+		margin-left: -7em;
     }
 
     /*styles for the logo container and its elements*/
@@ -47,5 +58,5 @@ div{
     .rightcont{
         width: 75%;
         float: right;
-        background-color: coral;
+        background-color: white;
     }
